--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,57 @@
 name: CI
 on:
-  push:
   pull_request:
+  push:
+    branches:
+      - master
 jobs:
   ci:
+    name: CI
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Build
+        with:
+          fetch-depth: 0
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.16.5"
+      - name: Version, Test and Build
+        run: |
+          export VERSION=$(./version.sh)
+          echo "VERSION=${VERSION}" >> ${GITHUB_ENV}
+          
+          export GO111MODULE=on
+          go mod download
+          go mod tidy
+          git diff --exit-code
+          
+          go test --race ./...
+          
+          CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -o aws-ses-pop3-server-x86_64-Linux
+          CGO_ENABLED=0 GOARCH=amd64 GOOS=darwin go build -o aws-ses-pop3-server-x86_64-Darwin
+          CGO_ENABLED=0 GOARCH=arm64 GOOS=darwin go build -o aws-ses-pop3-server-arm64-Darwin
+      # - name: Docker - Set up QEMU
+      #   uses: docker/setup-qemu-action@v1
+      # - name: Docker - Set up Buildx
+      #   uses: docker/setup-buildx-action@v1
+      - name: Docker - Login
+        if: ${{ github.event == 'push' && github.ref == 'refs/heads/master' }}
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Docker - Build and Push
         uses: docker/build-push-action@v2
+        with:
+          push: ${{ github.event == 'push' && github.ref == 'refs/heads/master' }}
+          # platforms:
+          #   linux/amd64
+          #   linux/arm64
+          tags: |
+            markushinz/aws-ses-pop3-server:latest
+            markushinz/aws-ses-pop3-server:v${{ env.VERSION }}
+      - name: Release
+        if: ${{ github.event == 'push' && github.ref == 'refs/heads/master' }}
+        run: GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}" gh release create "v${VERSION}" --title "v${VERSION}" --notes "v${VERSION}" ./aws-ses-pop3-server-x86_64-Linux ./aws-ses-pop3-server-x86_64-Darwin ./aws-ses-pop3-server-arm64-Darwin
