--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,20 @@
 version: 2
 updates:
-  - package-ecosystem: gomod
+  - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: daily
+    assignees:
+      - markushinz
   - package-ecosystem: docker
     directory: /
     schedule:
       interval: daily
+    assignees:
+      - markushinz
+  - package-ecosystem: gomod
+    directory: /
+    schedule:
+      interval: daily
+    assignees:
+      - markushinz
