--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,8 @@ sonar.organization=markushinz
 
 sonar.go.coverage.reportPaths=cover.out
 
-sonar.sources=./
-sonar.tests=./
+sonar.sources=.
+sonar.tests=.
 sonar.test.inclusions=**/**_test.go
 sonar.sources.inclusions=**/**.go
 sonar.exclusions=**/**_test.go,main.go
