--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,8 @@ jobs:
           go mod tidy
           git diff --exit-code
 
-          go test --race --coverprofile cover.out ./...
+          go install github.com/ory/go-acc@latest
+          go-acc ./... -o cover.out -- --race
 
           CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -o aws-ses-pop3-server-x86_64-Linux
           CGO_ENABLED=0 GOARCH=amd64 GOOS=darwin go build -o aws-ses-pop3-server-x86_64-Darwin
