--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.sources=.
 sonar.tests=.
 sonar.test.inclusions=**/**_test.go
 sonar.sources.inclusions=**/**.go
-sonar.exclusions=**/**_test.go,main.go
+sonar.exclusions=main.go,**/**_test.go
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=aws-ses-pop3-server
