--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,8 @@ jobs:
           go mod tidy
           git diff --exit-code
 
-          go test --race --coverprofile cover.out ./...
+          go install github.com/ory/go-acc@latest
+          go-acc ./... -o cover.out -- --race
 
           CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -o aws-ses-pop3-server-x86_64-Linux
           CGO_ENABLED=0 GOARCH=amd64 GOOS=darwin go build -o aws-ses-pop3-server-x86_64-Darwin
@@ -56,11 +57,11 @@ jobs:
           #   linux/amd64
           #   linux/arm64
           tags: |
-            markushinz/aws-ses-pop3-server:latest
-            markushinz/aws-ses-pop3-server:v${{ env.VERSION }}
+            ${{ github.repository }}:latest
+            ${{ github.repository }}:v${{ env.VERSION }}
       - name: Release
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         run: GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}" gh release create "v${VERSION}" --title "v${VERSION}" --notes "v${VERSION}" ./aws-ses-pop3-server-x86_64-Linux ./aws-ses-pop3-server-x86_64-Darwin ./aws-ses-pop3-server-arm64-Darwin
       - name: Deploy
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        run: GITHUB_TOKEN="${{ secrets.TU_TOKEN }}" gh workflow run -R "${{ secrets.DEPLOY_REPO }}" cd.yaml -f "repository=markushinz/aws-ses-pop3-server" -f "tag=v${VERSION}" -f "merge=true"
+        run: GITHUB_TOKEN="${{ secrets.TU_TOKEN }}" gh workflow run -R "${{ secrets.DEPLOY_REPO }}" cd.yaml -f "repository=${{ github.repository }}" -f "tag=v${VERSION}" -f "merge=true"
