--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.17.2"
+          go-version: "1.17"
       - name: Version, Test and Build
         run: |
           export VERSION=$(./version.sh)
@@ -24,11 +24,11 @@ jobs:
 
           export GO111MODULE=on
           go mod download
-          go mod tidy
+          go mod tidy -compat=1.17
           git diff --exit-code
 
           go install github.com/ory/go-acc@latest
-          go-acc ./... -o cover.out -- --race
+          go-acc ./... -o cover.out -- -race
 
           CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -o aws-ses-pop3-server-x86_64-Linux
           CGO_ENABLED=0 GOARCH=amd64 GOOS=darwin go build -o aws-ses-pop3-server-x86_64-Darwin
