--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Docker - Set up Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Docker - Login
         uses: docker/login-action@v2
         with:
