--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,12 +39,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      # - name: Docker - Set up QEMU
-      #   uses: docker/setup-qemu-action@v1
-      # - name: Docker - Set up Buildx
-      #   uses: docker/setup-buildx-action@v1
+      - name: Docker - Set up Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Docker - Login
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -53,12 +50,11 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-          # platforms:
-          #   linux/amd64
-          #   linux/arm64
           tags: |
             ${{ github.repository }}:latest
             ${{ github.repository }}:v${{ env.VERSION }}
+          cache-from: type=registry,ref=${{ github.repository }}:buildcache
+          cache-to: type=registry,ref=${{ github.repository }}:buildcache,mode=max
       - name: Release
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         run: GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}" gh release create "v${VERSION}" --generate-notes ./aws-ses-pop3-server-x86_64-Linux ./aws-ses-pop3-server-x86_64-Darwin ./aws-ses-pop3-server-arm64-Darwin
