--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,10 +33,9 @@ jobs:
           CGO_ENABLED=0 GOARCH=amd64 GOOS=darwin go build -o aws-ses-pop3-server-x86_64-Darwin
           CGO_ENABLED=0 GOARCH=arm64 GOOS=darwin go build -o aws-ses-pop3-server-arm64-Darwin
       - name: SonarCloud Scan
-        if: ${{ github.actor != 'dependabot[bot]' }}
-        uses: SonarSource/sonarcloud-github-action@master
+        if: ${{ github.actor != 'renovate[bot]' }}
+        uses: SonarSource/sonarqube-scan-action@v7.0.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       - name: Docker - Set up Buildx
         uses: docker/setup-buildx-action@v3
