--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,4 +62,6 @@ jobs:
           cache-to: type=registry,ref=${{ github.repository }}:buildcache,mode=max
       - name: Release
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        run: GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}" gh release create "v${VERSION}" --generate-notes ./aws-ses-pop3-server-x86_64-Linux ./aws-ses-pop3-server-arm64-Linux ./aws-ses-pop3-server-x86_64-Darwin ./aws-ses-pop3-server-arm64-Darwin
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release create "v${VERSION}" --generate-notes ./aws-ses-pop3-server-x86_64-Linux ./aws-ses-pop3-server-arm64-Linux ./aws-ses-pop3-server-x86_64-Darwin ./aws-ses-pop3-server-arm64-Darwin
