Modify Renovate config to adjust dependency settings
Updated Renovate configuration to disable rate limiting and added support for pinning GitHub Action digests.

--- a/renovate.json
+++ b/renovate.json
@@ -3,13 +3,11 @@
   "extends": [
     ":dependencyDashboard",
     ":enablePreCommit",
-    "docker:pinDigests"
+    ":disableRateLimiting",
+    "docker:pinDigests",
+    "helpers:pinGitHubActionDigests"
   ],
-  "kubernetes": {
-    "managerFilePatterns": [
-      "/\\.ya?ml$/"
-    ]
-  },
+  "separateMultipleMajor": true,
   "bumpVersion": "patch",
   "rebaseWhen": "behind-base-branch",
   "postUpdateOptions": [
